--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,18 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".di.OSRSCriticApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OSRSCritic"
-        android:name=".di.OSRSCriticApp">
+        android:theme="@style/Theme.OSRSCritic">
         <activity
-            android:name=".MainActivity"
+            android:name=".OtherEmailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".IndexActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
