--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OSRSCritic">
         <activity
-            android:name=".RegisterActivity"
+            android:name=".ProfileDetailsActivity"
             android:exported="false" />
         <activity
             android:name=".OtherEmailActivity"
