--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'com.google.gms.google-services'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+
 }
 
 android {
@@ -62,6 +64,7 @@ dependencies {
 
 // We will use it for loading the images
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 // For ViewModel
